added more routes, added better swagger documentation, and added more controller
